CRITICAL FIX: Update vercel.json to serve correct background-workspace.html from server/public

--- a/vercel.json
+++ b/vercel.json
@@ -27,11 +27,11 @@
     },
     {
       "source": "/background-workspace",
-      "destination": "/background-workspace.html"
+      "destination": "/server/public/background-workspace.html"
     },
     {
       "source": "/background-workspace.html",
-      "destination": "/background-workspace.html"
+      "destination": "/server/public/background-workspace.html"
     },
     {
       "source": "/background-remover",
