--- a/pdf-to-excel-backend/requirements.txt
+++ b/pdf-to-excel-backend/requirements.txt
@@ -6,6 +6,7 @@ python-multipart==0.0.6
 # Google Cloud Services
 google-cloud-storage==2.10.0
 google-cloud-documentai==2.20.1
+google-cloud-firestore==2.13.1
 
 # PDF Processing
 pdfminer.six==20221105
