fix: Add missing openpyxl dependency for Excel file creation

--- a/pdf-to-excel-backend/requirements.txt
+++ b/pdf-to-excel-backend/requirements.txt
@@ -12,6 +12,9 @@ google-cloud-firestore==2.13.1
 pdfminer.six==20221105
 PyPDF2==3.0.1
 
+# Excel Processing
+openpyxl==3.1.2
+
 # Testing
 pytest==7.4.3
 pytest-asyncio==0.21.1
