Fix: Add explicit OPTIONS handling in controller, skip rate limiter for OPTIONS, improve error logging

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -21,6 +21,9 @@ httpx==0.25.2
 # Word Document Processing
 python-docx==1.1.0
 
+# Excel Document Processing
+openpyxl==3.1.2
+
 # Firebase Authentication
 firebase-admin==6.2.0
 
