--- a/pdf-to-excel-backend/Dockerfile
+++ b/pdf-to-excel-backend/Dockerfile
@@ -17,6 +17,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy application code
 COPY *.py ./
+COPY free_pdf_to_excel/ ./free_pdf_to_excel/
 
 # Expose port
 EXPOSE 8080
