--- a/pdf-to-excel-backend/Dockerfile
+++ b/pdf-to-excel-backend/Dockerfile
@@ -1,4 +1,5 @@
 # Use Python 3.11 slim as base image
+# Build timestamp: 2025-12-28T06:45:00Z - Force cache invalidation for Form Parser fallback fix
 FROM python:3.11-slim
 
 # Set working directory
