CRITICAL FIXES: Blank output prevention + dynamic columns + non-empty enforcement
- Added non-empty enforcement in process_document to prevent blank layouts
- Created _create_minimal_fallback_layout() for last-resort fallback
- Fixed exception handler to use minimal fallback instead of empty layout
- Removed forced 2-column layouts from KEY_VALUE mode (dynamic columns)
- Removed 2-column fallbacks from TABLE_VISUAL and GEOMETRIC_HYBRID
- Updated Adobe fallback comment (CellData -> Cell)
- Added test folder to .gitignore

Fixes:
- Blank output prevention (no more 'Blank or template document')
- Dynamic columns (2  N columns based on detected structure)
- Non-empty enforcement (every layout has at least 1 row)
- Fallback chain: TABLE_STRICT  GEOMETRIC_HYBRID  PLAIN_TEXT  Minimal

--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,7 @@ output-*.png
 
 .vercel
 .env*.local
+
+# Test Documents (local testing only - never deploy)
+Test Documents files/
+"Test Documents files/"
