Fix cell mixing and add wrap_text for Unicode/Hindi text
- Fixed cell mixing in GEOMETRIC_HYBRID mode - prevent incorrect text combination
- Added wrap_text for long text and Unicode (Hindi) to prevent overflow
- Improved cell boundary preservation - each block in own cell when possible
- Better column assignment for misaligned blocks
- Fixed fallback for GEOMETRIC_HYBRID when no columns detected

--- a/pdf-to-excel-backend/Dockerfile
+++ b/pdf-to-excel-backend/Dockerfile
@@ -1,5 +1,5 @@
 # Use Python 3.11 slim as base image
-# Build timestamp: 2025-12-28T17:00:00Z - Force cache invalidation for STEP-12/14: Fix pages_metadata extraction and credit calculation
+# Build timestamp: 2025-01-28T12:00:00Z - Force cache invalidation for CRITICAL BUG FIXES: Blank output prevention + dynamic columns + non-empty enforcement
 FROM python:3.11-slim
 
 # Set working directory
