Complete PDF to Word free/premium separation: Free version completely browser-based, Premium page with 30 credit minimum check, 2 credits/page, unsupported popup, and proper redirects

--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,7 @@ output-*.png
 # Test Documents (local testing only - never deploy)
 Test Documents files/
 "Test Documents files/"
+
+# Export results (test files only - never commit)
+Export result/
+"Export result/"
