Fix PDF to Word converter JavaScript errors, add logging, sync URLs

--- a/vercel.json
+++ b/vercel.json
@@ -11,11 +11,19 @@
     },
     {
       "source": "/pdf-to-word-converter",
-      "destination": "/frontend/pdf-to-word-converter.html"
+      "destination": "/pdf-to-word-converter.html"
     },
     {
       "source": "/pdf-to-word-converter.html",
-      "destination": "/frontend/pdf-to-word-converter.html"
+      "destination": "/pdf-to-word-converter.html"
+    },
+    {
+      "source": "/pdf-to-word-premium",
+      "destination": "/pdf-to-word-premium.html"
+    },
+    {
+      "source": "/pdf-to-word-premium.html",
+      "destination": "/pdf-to-word-premium.html"
     },
     {
       "source": "/pdf-to-jpg",
