Fix PDF editor: Add auth scripts, fix upload flow, sync all paths for production

--- a/.gitignore
+++ b/.gitignore
@@ -149,3 +149,11 @@ Test Documents files/
 # Export results (test files only - never commit)
 Export result/
 "Export result/"
+
+# PDF Word test folder (local testing only - never commit)
+Pdf Word/
+"Pdf Word/"
+
+# PDF Edit test folder (local testing only - never commit)
+Pdf Edit/
+"Pdf Edit/"
