Add PDF editor routes to Vercel config

--- a/vercel.json
+++ b/vercel.json
@@ -34,6 +34,22 @@
       "destination": "/frontend/pdf-editor.html"
     },
     {
+      "source": "/edit-pdf",
+      "destination": "/edit-pdf.html"
+    },
+    {
+      "source": "/edit-pdf.html",
+      "destination": "/edit-pdf.html"
+    },
+    {
+      "source": "/pdf-editor-preview",
+      "destination": "/pdf-editor-preview.html"
+    },
+    {
+      "source": "/pdf-editor-preview.html",
+      "destination": "/pdf-editor-preview.html"
+    },
+    {
       "source": "/background-workspace",
       "destination": "/background-workspace.html"
     },
